<resources>
    <string name="MadDiscovery">Enter All Required Details</string>
    <string name="MadDiscovery2">Sale Product</string>
    <string name="Detail">Product: </string>
    <string name="location">Quantity: </string>
    <string name="Date">Date of Entry: </string>
    <string name="start">When Fueld: </string>
    <string name="Price">Price: </string>
    <string name="app_name">Petrol Station</string>
    <string name="button">Update</string>
    <string name="button2">Search</string>
    <string name="deleteEvents">Delete Details</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="enter_details">Enter Details</string>
    <string name="Add_New">Add Details</string>
    <string name="view_users">View Users</string>
    <string name="sale_products">Sale Products</string>
    <string name="event">event</string>
    <string name="view_details">View Details</string>
    <string name="hint_search">Search</string>
    <string name="search_hint">Type and Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="usrpg">Users</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="id">Id</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="quantity">Available Quantity</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Worker List</string>
    <string name="button_2">View Users</string>


</resources>
