<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/hint_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/Add_New"/>
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/view_details"/>
    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/view_users"/>
    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/sale_products"/>

</menu>