<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EnterDetails">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sstgroup.petrolstation.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MadDiscovery"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#770000ff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detail"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/station_name"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView2"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/textView3"
            android:layout_below="@+id/station_name"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/station_name"
            android:maxLines="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/station_location"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView3"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:id="@+id/textView4"
            android:layout_below="@+id/station_location"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/station_location" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/textView5"
            android:layout_below="@+id/date"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView5"
            android:inputType="time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:id="@+id/textView6"
            android:layout_below="@+id/time"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/time" />

        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/textView7"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/number" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:inputType="number"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:onClick="btn_saved"
            android:id="@+id/save"
            android:layout_below="@+id/quantity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />



    </RelativeLayout>
</ScrollView>