<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MadDiscovery"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#770000ff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Detail"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/textView2"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/product"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/station_name"
                    android:maxLines="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/station_location"
                    android:layout_below="@+id/textView3"
                    android:layout_alignParentStart="true"
                    android:inputType="none"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/station_location"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/station_location" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/textView5"
                    android:layout_below="@+id/date"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    android:layout_below="@+id/textView5"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/textView5"
                    android:inputType="time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                    android:id="@+id/textView6"
                    android:layout_below="@+id/time"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/time" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price"
                    android:layout_below="@+id/textView6"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/textView6"
                    android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:id="@+id/textView7"
                android:layout_below="@+id/price"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/time" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_id"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/textView6"
                android:inputType="text" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button"
                    android:id="@+id/button_update"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/textView" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button2"
                    android:id="@+id/button_delete"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_id"
                android:text="Quantity" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_update"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


        </RelativeLayout>
    </LinearLayout>

</ScrollView>