<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/MadDiscovery"
                android:textColor="#770000ff" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:text="@string/Detail" />

            <EditText
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/station_name"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/product"
                android:maxLines="1"
                android:text="@string/location" />

            <EditText
                android:id="@+id/newQuantityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:layout_marginBottom="10dp"
                android:inputType="none" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/time"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newQuantityTxt"
                android:text="@string/Price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/newQuantityTxt"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/newQuantityTxt"
                android:layout_below="@+id/textView6"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/price"
                android:text="@string/id"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView8"
                android:layout_below="@+id/textView7"
                android:inputType="text"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity"
                android:layout_toEndOf="@+id/textView7"
                android:layout_toLeftOf="@+id/textView"
                android:text="@string/button" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_id"
                android:text="Available Quantity" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button_delete"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/button_delete"
                android:layout_below="@+id/textView8"
                android:layout_marginBottom="10dp"
                android:editable="false"
                android:ems="10"
                android:inputType="number"
                android:text="" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>